# oauth2

./: .env.template  Cargo.toml  README.md
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20251226_145445_create_user.rs
server/src/: main.rs
server/src/api/: mod.rs
server/src/api/auth/: mod.rs  register.rs
