[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8.7"
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "mock",
] }
